# reqx

./: Cargo.toml  Makefile  README.md  deny.toml  docker-compose.test.yml
.claude/: CONTRIBUTING.md
.docker/dev/: Dockerfile  docker-compose.yml
.docker/mock-api/: Dockerfile  package.json  server.js
.docker/test/: Dockerfile.alpine  Dockerfile.debian-12  Dockerfile.fedora  Dockerfile.ubuntu-22  Dockerfile.ubuntu-24  docker-compose.test.yml
examples/: auth.http  posts.http  special.http  users.http
packaging/unix/: PKGBUILD  reqx.rb
packaging/windows/: winget.yaml
scripts/: install.ps1  install.sh
src/: main.rs
src/cli/: completions.rs  config.rs  export.rs  health.rs  import.rs  init.rs  mod.rs  run.rs  validate.rs  watch.rs
src/config/: mod.rs
src/http/: client.rs  mod.rs
src/output/: mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs
src/runtime/: mod.rs
